# Prog2-CMake-Template

./: CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
src/: Color.cpp  Color.h  ColorBuf.cpp  ColorBuf.h  ComplexNumber.cpp  ComplexNumber.h  MathMatrix.cpp  MathMatrix.h  MathMatrix_compile.cpp  MathVec.h  Utils.cpp  Utils.h  main.cpp
src/ViewPortGL/: ShaderInterface.cpp  ShaderInterface.h  ViewPortGL.cpp  WindowInterface.h
